--- a/homepage_style.css
+++ b/homepage_style.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins',sans-serif;
+  font-family: "Bookman Old Style",sans-serif;
 }
 body{
   background-image: url(logos/blurred\ deped\ logo.jpg);
