styling/layout/number

--- a/endUser_Webpage.css
+++ b/endUser_Webpage.css
@@ -29,10 +29,19 @@ body {
 }
 
 .quantityInput {
-    text-align: center;
+    justify-content: center;
     font-family: "Bookman Old Style", sans-serif;
     font-weight: bold;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    align-self: center;
+    align-content: center;
+    text-align: center;
+}
 
+.quantityInputUser {
+   
 }
 
 .quantityTitle {
