--- a/superadmin_inventory.css
+++ b/superadmin_inventory.css
@@ -29,6 +29,25 @@ h2{
     margin-left: 590px;
 }
 
+.convertbtn{
+    float: right;
+    text-decoration: none;
+    margin: 122px -365px 0px 0px;
+    height: 25%;
+    width: 10%;
+    border-radius: 15px;
+    cursor: pointer;
+    background: transparent;
+    color: white;
+    border: 1px solid black;
+    outline: none;
+    font-size: 15px;
+}
+
+.convertbtn:hover{
+    background: grey;
+}
+
 
 
 
@@ -129,7 +148,7 @@ span #times{
 
 .searchbar{
     float: right;
-    margin: 130px 50px 0px 0px;  
+    margin: 130px 170px 0px 0px;  
     
 }
 
