--- a/usage_logs.css
+++ b/usage_logs.css
@@ -27,52 +27,32 @@ header h1{
     margin: -120px 0px 0px 140px;
 }
 
-/* Search Bar*/
-
-.searchbar{
+.convertbtn{
     float: right;
-    margin: 130px 170px 0px 0px;   
-}
-
-
-.searchbar input{
-    background: white;
-    width: 200px;
-    height: 30px;
-    border: 2px solid black;
-    border-radius: 10px;
-    color: black;
-    text-align: center;
+    text-decoration: none;
+    margin: 122px 20px 0px 0px;
+    height: 25%;
+    width: 10%;
+    border-radius: 15px;
+    cursor: pointer;
+    background: transparent;
+    color: white;
+    border: 1px solid black;
     outline: none;
-    
-}
-/* Search Bar END */
-
-/* Popup Add Animation*/
-
-.popup{
-    height: 450px;
-    border: 3px solid black;
-    border-radius: 10px;
-    padding: 20px;
-    width: 500px;
-    background: #fff;
-    border-radius: 6px;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, -50%)scale(0.1);
-    visibility: hidden;
-    transition: transform 0.4s, top 0.4s;
+    font-size: 15px;
 }
 
-.open-popup{
-    visibility: visible;
-    top: 50%;
-    transform: translate(-50%, -50%)scale(1);
+.convertbtn:hover{
+    background: grey;
 }
-/* Popup Add Animation*/
 
+/* HEADER END*/
+
+
+h2{
+    font-size: 40px;
+    text-align: center;
+}
 
 /* MENU BAR*/
 
@@ -162,107 +142,46 @@ span #times{
 
 /* MENU BAR END */
 
-.convertbtn{
-    float: right;
-    text-decoration: none;
-    margin: 122px -360px 0px 0px;
-    height: 25%;
-    width: 10%;
-    border-radius: 15px;
-    cursor: pointer;
-    background: transparent;
-    color: white;
-    border: 1px solid black;
-    outline: none;
-    font-size: 15px;
-}
-
-.convertbtn:hover{
-    background: grey;
-}
-
-/* HEADER  END*/
-
-
-h2{
-    font-size: 40px;
-    text-align: center;
-}
-
-
 /* TABLE */
 table{
-    margin-left: 160px;
+    margin-left: 350px;
     font-size: 20px;
     margin-top: 50px;
-    width: 80%;
+    width: 50%;
     border: 2px solid black;
-    border-collapse: collapse; 
-    
-    
+    border-collapse: collapse;  
 }
 
-.RIS-number{
-    width: 8%;
+
+
+.stock-number{
+    width: 5%;
 }
 
-.RISno{
+.align-stock-number{
     text-align: center;
-    
-}
-
-.account-name{
-    width: 20%;
-}
-
-.align-account-name{
-    text-align: left;
-    padding: 0px 0px 0px 10px;
-}
-
-.stock-no{
-    width: 8%;
-}
-
-.align-stock-no{
-    text-align: left;
-    padding: 0px 0px 0px 10px;
+   
 }
 
 .item-description{
-    width: 20%;
+    width: 10%;
 }
 
 .align-item-description{
-    text-align: left;
-    padding: 0px 0px 0px 10px;
-}
-
-.stock-unit{
-    width: 10%;
-}
-
-.align-stock-unit{
-    text-align: left;
-    padding: 0px 0px 0px 10px;
-}
-
-.quantity-input{
-    width: 10%;
-}
-
-.align-quantity-input{
     text-align: center;
+    
 }
 
-.form-date{
-    width: 10%;
+.total-usage{
+    width: 5%;
 }
 
-.align-form-date{
+.align-total-usage{
     text-align: center;
-    padding: 0px 0px 0px 10px;
+    
 }
+
+
 
 table tr {
     text-align: left;
