--- a/Accounts_inventory.css
+++ b/Accounts_inventory.css
@@ -68,7 +68,7 @@ ol li{
 
 ol li a{
     color: white;
-    padding: 20px 15px 0px 0px;
+    padding: 20px 20px 0px 0px;
     text-decoration: none;
     display: block;
     font-size: 20px;
@@ -79,6 +79,7 @@ ol li a{
     text-transform: capitalize;
 }
 ol li a i{
+    margin-left: -10px;
     width: 70px;
     font-size: 25px;
     text-align: center;
