--- a/request_logs.css
+++ b/request_logs.css
@@ -120,6 +120,7 @@ ol li a{
     text-transform: capitalize;
 }
 ol li a i{
+    margin-left: -10px;
     width: 70px;
     font-size: 25px;
     text-align: center;
