--- a/usermanager_logs.css
+++ b/usermanager_logs.css
@@ -80,6 +80,7 @@ ol li a{
     text-transform: capitalize;
 }
 ol li a i{
+    margin-left: -10px;
     width: 70px;
     font-size: 25px;
     text-align: center;
