--- a/request_logs.css
+++ b/request_logs.css
@@ -194,9 +194,8 @@ h2{
 
 .select{
     display: flex;
-    
-    margin-top: 40px;
-    margin-left: 200px;
+    margin-top: 20px;
+    margin-left: 10px;
     font-size: 18px;
 }
 .select label{
@@ -212,9 +211,8 @@ h2{
 /* TABLE */
 table{
     
-    margin-left: 177px;
     font-size: 20px;
-    width: 87%;
+    width: 100%;
     border: 2px solid black;
     border-collapse: collapse; 
     
@@ -231,21 +229,34 @@ table{
 }
 
 .account-name{
-    width: 20%;
+    width: 18%;
 }
 
 .align-account-name{
     text-align: left;
     padding: 0px 0px 0px 10px;
 }
+.center-code{
+    width: 5%;
+}
+.align-center-code{
+    text-align: center;
+}
 
 .stock-no{
-    width: 8%;
+    width: 6%;
+}
+.user-office{
+    width: 16%;
+}
+
+.align-user-office{
+    text-align: left;
 }
 
 .align-stock-no{
-    text-align: left;
-    padding: 0px 0px 0px 10px;
+    text-align: center;
+    
 }
 
 .item-description{
@@ -258,7 +269,7 @@ table{
 }
 
 .stock-unit{
-    width: 10%;
+    width: 7%;
 }
 
 .align-stock-unit{
@@ -267,7 +278,7 @@ table{
 }
 
 .quantity-input{
-    width: 10%;
+    width: 8%;
 }
 
 .align-quantity-input{
@@ -311,9 +322,8 @@ table tr td{
 
 .scroll{
     margin-top: 10px;
-    margin-left: 20px;
-    width: 90%;
-    height: 350px;
+    width: 100%;
+    height: 400px;
     overflow-y: scroll;
 }
 
