--- a/usermanagementstyle.css
+++ b/usermanagementstyle.css
@@ -368,7 +368,7 @@ table tr td{
     margin-bottom: 20px;
     border: 2px solid black;
     border-radius: 5px;
-    text-align: center;
+    text-align: left;
     font-size: 20px;
     cursor: pointer;
 }
