--- a/usermanagementstyle.css
+++ b/usermanagementstyle.css
@@ -24,9 +24,8 @@ header img{
 
 .searchbar{
     position: absolute;
-    display: flex;
-    margin-left: 190px;
-    margin-top: 30px;
+    margin-left: 60%;
+    margin-top: -40px;
     
 }
 
@@ -68,14 +67,15 @@ ul li{
 }
 ul li a{
     display: block;
+    margin: 5px 0px 0px 5px;
     padding: 15px 25px;
     color: white;
     text-decoration: none;
     text-align: center;
-    font-size: 20px;
-    outline: 2px solid darkblue;
+    font-size: 13px;
+    outline: 2px solid black;
     box-shadow: 2px darkblue;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 ul li ul.dropdown li{
      display: block;
@@ -125,7 +125,7 @@ h2{
 
 /* TABLE */
 table{
-    font-size: 25px;
+    font-size: 20px;
     margin-left: 185px;
     width: 87%;
     border: 2px solid black;
@@ -193,18 +193,21 @@ table tr td{
 /* Popup Add Animation*/
 
 .popup{
+
+    position: absolute;
+    background: #fff;
     height: 270px;
+    width: 500px;
+    position: absolute;
     border: 3px solid black;
     border-radius: 10px;
-    width: 500px;
-    background: #fff;
-    border-radius: 6px;
-    position: absolute;
     top: 0;
     left: 50%;
+    display: grid;
     transform: translate(-50%, -50%)scale(0.1);
     visibility: hidden;
-    transition: transform 0.4s, top 0.4s;
+    transition: transform 0.4s;
+   
 }
 
 .open-popup{
@@ -212,6 +215,8 @@ table tr td{
     top: 50%;
     transform: translate(-50%, -50%)scale(1);
 }
+
+
 /* Popup Add Animation*/
 
 
@@ -220,20 +225,25 @@ table tr td{
 /* Popup Add Description*/
 
 .popup h2{
+    text-align: center;
     font-size: 25px;
-    margin-left: 190px;
+    margin-left: 0px;
+    height: 11%;
+    background-color: #162fa0;
+    color: white;
+    cursor: pointer;
     
 }
 
 .Item label{
     position: absolute;
     margin-left: 20px;
-    margin-top: -30px;
+    margin-top: -10px;
 }
 .Item input{
     position: absolute;
     margin-left: 150px;
-    margin-top: -30px;
+    margin-top: -10px;
     border: 2px solid black;
     margin-bottom: 20px;
     width: 50%;
@@ -241,17 +251,17 @@ table tr td{
 
 
 .Stock{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 .Stock label{
     position: absolute;
-    margin-top: 50px;
+    margin-top: 60px;
     margin-left: 50px;
 
 }
 .Stock input{
     position: absolute;
-    margin-top: 50px;
+    margin-top: 60px;
     border: 2px solid black;
     margin-left: 150px;
     width: 50%;
@@ -259,14 +269,14 @@ table tr td{
 
 .Unit label{
     position: absolute;
-    margin-top: 30px;
+    margin-top: 50px;
     margin-left: 70px;
     
 }
 .Unit .dropdownunit{
     position: absolute;
     border: 2px solid black;
-    margin-top: 30px;
+    margin-top: 50px;
     margin-left: 150px;
     width: 50%;
     margin-bottom: 20px;
@@ -275,7 +285,7 @@ table tr td{
 }
 .Quantity label{
     position: absolute;
-    margin-top: 70px;
+    margin-top: 90px;
     margin-left: 55px;
 
 }
@@ -283,7 +293,7 @@ table tr td{
     position: absolute;
     border: 2px solid black;
     width: 50%;
-    margin-top: 70px;
+    margin-top: 90px;
     margin-left: 150px
 
 }
@@ -291,27 +301,23 @@ table tr td{
 .buttons{
     display: flex;
     justify-content: space-between;
-    margin: 100px;
-    
-      
+    margin: 120px;
 }
 
 .Save{
-    margin-left: 40px;
+    margin-left: 50px;
     width: 25%;
     height: 30px;
 
 }
 .Close{
-    margin-right: 20px;
+    margin-right: 30px;
     width: 25%;
     height: 30px;
 }
 
 
-
-
-/* Popup Add Description*/
+/* Popup Add Description End*/
 
 
 
@@ -326,18 +332,19 @@ table tr td{
 /* Popup Edit Animation*/
 
 .popup2{
-    height: 250px;
+    position: absolute;
+    background: #fff;
+    height: 230px;
+    width: 500px;
+    position: absolute;
     border: 3px solid black;
     border-radius: 10px;
-    width: 500px;
-    background: #fff;
-    border-radius: 6px;
-    position: absolute;
     top: 0;
     left: 50%;
+    display: grid;
     transform: translate(-50%, -50%)scale(0.1);
     visibility: hidden;
-    transition: transform 0.4s, top 0.4s;
+    transition: transform 0.4s;
 }
 .open-popup2{
     visibility: visible;
@@ -350,9 +357,13 @@ table tr td{
 
 /* Popup Edit Description*/
 .popup2 h2{
+    text-align: center;
     font-size: 25px;
-    margin-left: 170px;
-    
+    margin-left: 0px;
+    height: 11%;
+    background-color: #162fa0;
+    color: white;
+    cursor: pointer;
 }
 
 
@@ -363,8 +374,8 @@ table tr td{
     width: 300px;
     height: 50px;
     position: relative;
-    margin-top: 10px;
-    margin-left: 120px;
+    margin-top: 20px;
+    margin-left: 100px;
     margin-bottom: 20px;
     border: 2px solid black;
     border-radius: 5px;
@@ -382,14 +393,15 @@ table tr td{
 
 
 .Quantity2 label{
-    margin-left: 40px;
+    margin-left: 140px;
+    font-size: 20px;
 
 }
 
 .Quantity2 input{
     border: 2px solid black;
     width: 15%;
-    margin-left: 117px;
+    margin-left: 7px;
     font-size: 20px;
     
     
@@ -425,85 +437,9 @@ table tr td{
 
 
 
-
-
-/* Popup Delete Animation*/
-.popup3{
-    height: 250px;
-    border: 3px solid black;
-    border-radius: 10px;
-    width: 500px;
-    background: #fff;
-    border-radius: 6px;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, -50%)scale(0.1);
-    visibility: hidden;
-    transition: transform 0.4s, top 0.4s;
-}
-.open-popup3{
-    visibility: visible;
-    top: 50%;
-    transform: translate(-50%, -50%)scale(1);
-}
-/* Popup Delete Animation*/
-
-
-
-
-/* Delete Drescription*/
-.popup3 h2{
-    font-size: 25px;
-    margin-left: 120px;
-    margin-top: 20px;
-}
-.buttons3{
-    display: flex;
-    justify-content: space-between;
-}
-.Delete{
-    font-size: 20px;
-    width: 90px;
-    height: 50px;
-    margin-top: 20px;
-    margin-left: 210px;
-    background: white;
-
-}
-.Delete:hover{
-    background: red;
-    color: white;
-    cursor: pointer;
-}
-.Close3{
-    font-size: 20px;
-    height: 30px;
-    width: 70px;
-    margin-top: 70px;
-    margin-right: 30px;
-}
-
-
-
-
 /* Delete Dropdownlist*/
 .dropdowndelete{
-    width: 400px;
-    height: 50px;
-    position: relative;
-    margin-top: 10px;
-    margin-left: 50px;
-    margin-bottom: 20px;
-    border: 2px solid black;
-    border-radius: 5px;
-    text-align: center;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.dropdowndelete *{
-    box-sizing: border-box;
+    visibility: hidden;
 }
 
 /* Delete Dropdownlist*/
