--- a/usermanagementstyle.css
+++ b/usermanagementstyle.css
@@ -50,11 +50,12 @@ header img{
 /* NAV DROPDOWN LIST*/
 nav{
     float: right;
-    margin-right: 0px;
-    padding-top: 85px;
+    margin-right: 20px;
+    padding-top: 85px ;
+    
     
 }
-
+/*  UPDATE  */
 ul{
     list-style: none;
     
@@ -67,15 +68,15 @@ ul li{
 }
 ul li a{
     display: block;
-    margin: 5px 0px 0px 5px;
+    margin: 5px 10px 0px 0px;
     padding: 15px 25px;
     color: white;
     text-decoration: none;
     text-align: center;
-    font-size: 13px;
     outline: 2px solid black;
     box-shadow: 2px darkblue;
     border-radius: 5px;
+    box-sizing: border-box;
 }
 ul li ul.dropdown li{
      display: block;
@@ -87,6 +88,7 @@ ul li ul.dropdown{
     z-index: 999;
     display: none;
 }
+
 ul li a:hover{
     background: grey;
 }
@@ -94,7 +96,64 @@ ul li:hover ul.dropdown{
     display:block;
 }
 
+
+/* SETTINGS  */
+ul{
+    list-style: none;
+    
+
+}
+ul li{
+    display: inline-block;
+    position: relative;
+    
+}
+ul li a{
+    display: block;
+    margin: 5px 0px 0px 0px;
+    padding: 15px 25px;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    font-size: 13px;
+    outline: 2px solid black;
+    box-shadow: 2px darkblue;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+ul li ul.settings li{
+     display: block;
+}
+ul li ul.settings{
+    width: 100%;
+    background:#162fa0;
+    position: absolute;
+    z-index: 999;
+    display: none;
+}
+ul li a:hover{
+    background: grey;
+}
+ul li:hover ul.settings{
+    display:block;
+}
 /* NAV DROPDOWN LIST*/
+
+.queuing{
+    position: absolute;
+    margin: 89px 0px 0px 69.7%; 
+    width: 7%;
+    height: 6.5%;
+    border-radius: 7px;
+    background-color: #162fa0;
+    border: 2px solid black;
+    color: white;
+    font-size: 13px;
+    cursor: pointer;
+}
+.queuing:hover{
+    background: grey;
+}
 
 h1{
     font-size: 32px;
@@ -448,8 +507,3 @@ table tr td{
 
 
 /* RESPONSIVE WEBSITE */
-@media (min-width:768px){
-    header{
-        width: 100%;
-    }
-}
