--- a/queuing_release.css
+++ b/queuing_release.css
@@ -13,7 +13,7 @@ body {
 }
 
 .stock_number {
-    width: 80px;
+    width: 85px;
     text-align: center;
     font-family: "Bookman Old Style";
     font-weight: bold;
@@ -27,7 +27,7 @@ body {
     font-weight: bold;
 }
 .stock_unit {
-    width: 40px;
+    width: 60px;
     text-align: center;
     font-family: "Bookman Old Style";
     font-weight: bold;
@@ -61,6 +61,21 @@ body {
     height: 110px;
 }
 
+.backbtn{
+    float: right;
+    margin-top: 90px;
+    margin-right: 30px;
+    padding: 15px 15px 15px 15px;
+    color: white;
+    text-decoration: none;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+.backbtn:hover{
+    background: grey;
+}
+
+
 nav ul{
     float: right;
 }
@@ -72,44 +87,46 @@ nav ul{
 
 .entityDeped {
     margin-bottom: -17.5px;
-    margin-left: -800px;
+    margin-left: -840px;
 }
 
 .fundCluster {
-    margin-right: -770px;
+    margin-right: -820px;
 }
 
 .cityDivision {
+    margin-top: 10px;
     margin-left: -895px;
 }
 
 .locationDivision {
     margin-top: -20px;
-    margin-left: -525px;
+    margin-left: -510px;
 }
 
 .userOffice {
+    margin-top: 10px;
     margin-bottom: -17.5px;
-    margin-left: -915px;
+    margin-left: -910px;
 }
 
 .userOfficePHP {
     margin-top: -20px;
-    margin-left: 440px;
+    margin-left: 410px;
 }
 
 .centerCode {
     margin-top: -18px;
-    margin-right: -650px;
+    margin-right: -672px;
 }
 
 .centerCodePHP {
     margin-top: -20px;
-    margin-left: 900px;
+    margin-left: 890px;
 }
 
 .risNo {
-    margin-left: 710px;
+    margin-left: 760px;
 }
 
 .purposeTitle {
@@ -185,7 +202,7 @@ nav ul{
     font-size: 12px;
     font-weight: bold;
     text-align: left;
-    width: 300px;
+    width: 370px;
 }
 
 .itemDescription_title {
@@ -215,7 +232,7 @@ nav ul{
 }
 
 #generatePDF {
-    margin-left: 1100px;
+    margin-left: 550px;
     margin-top: 200px;
     margin-bottom: 10px;
     width: 100px;
@@ -236,6 +253,25 @@ nav ul{
     background-color: grey; /* Darken the background color on hover */
 }
 
+.buttonCancel{
+    margin-left: 100px;
+    margin-top: 0px;
+    width: 100px;
+    height: 50px;
+    border-radius: 13px;
+    font-family: "Bookman Old Style";
+    font-size: 13px;
+    font-weight: bold;
+    background-color: #162fa0; 
+    color: #fff;
+    border: 2px solid #162fa0;
+    transition: background-color .3s; 
+    cursor: pointer;
+}
+
+.buttonCancel:hover{
+    background-color: grey;
+}
 
 #logoutButton {
     margin-left: 1200px;
@@ -295,14 +331,14 @@ nav ul{
 header{
     height: 150px;
     background-color: #162fa0;  
-    position: sticky;
+   
 }
 
 
 header img{
     margin-top: 10px;
     width: 120px;
-    position: sticky;
+   
 }
 
 
@@ -313,10 +349,83 @@ h1{
     position: absolute;
     margin-top: -130px;
     margin-left: 120px;
+   
+    
     
 
 }
 h2{
     font-size: 40px;
     margin-left: 590px;
+}
+.table_head{
+    border: 5px solid black;
+}
+
+.stock-number{
+    font-size: 15px;
+    font-weight: normal;
+    font-family: 'Bookman Old Style';
+}
+
+.stock-unit{
+    font-size: 15px;
+    font-weight: normal;
+    font-family: 'Bookman Old Style';
+}
+.item-description{
+    width: 200px;
+    font-size: 15px;
+    font-weight: normal;
+    font-family: 'Bookman Old Style';
+}
+
+.quantity-Input{
+    font-size: 15px;
+    font-weight: normal;
+    font-family: 'Bookman Old Style';
+}
+
+.btnRelease{
+    display: block;
+    margin-left: 600px;
+    margin-top: -125px;
+    margin-bottom: 20px;
+    width: 100px;
+    height: 50px;
+    border-radius: 13px;
+    font-family: "Bookman Old Style";
+    font-size: 13px;
+    font-weight: bold;
+    background-color: #162fa0; 
+    color: #fff; 
+    border: 2px solid #162fa0;
+    transition: background-color .3s;
+    cursor: pointer; 
+}
+
+.btnRelease:hover{
+    background-color: grey;
+}
+
+.btnCancel{
+    display: block;
+    margin-left: 700px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    width: 100px;
+    height: 50px;
+    border-radius: 13px;
+    font-family: "Bookman Old Style";
+    font-size: 13px;
+    font-weight: bold;
+    background-color: #162fa0; 
+    color: #fff; 
+    border: 2px solid #162fa0;
+    transition: background-color .3s;
+    cursor: pointer; 
+}
+
+.btnCancel:hover{
+    background-color: grey;
 }
