--- a/queuing_release.css
+++ b/queuing_release.css
@@ -388,8 +388,8 @@ h2{
 
 .btnRelease{
     display: block;
-    margin-left: 600px;
-    margin-top: -125px;
+    margin-left: 40%;
+    margin-top: -70px;
     margin-bottom: 20px;
     width: 100px;
     height: 50px;
@@ -410,8 +410,8 @@ h2{
 
 .btnCancel{
     display: block;
-    margin-left: 700px;
-    margin-top: 15px;
+    margin-left: 50%;
+    margin-top: -30px;
     margin-bottom: 20px;
     width: 100px;
     height: 50px;
